fix(scss): adjusted padding on mobile version to match design specs

--- a/packages/react/src/patterns/blocks/ContentBlockSimple/__stories__/index.scss
+++ b/packages/react/src/patterns/blocks/ContentBlockSimple/__stories__/index.scss
@@ -1,1 +1,6 @@
 @import '../../../../../../styles/scss/patterns/blocks/content-block-simple/content-block-simple';
+
+.bx--grid .bx--row .content-block-story {
+  padding-left: 0;
+  padding-right: 0;
+}
