--- a/packages/styles/scss/patterns/blocks/content-block-simple/_content-block-simple.scss
+++ b/packages/styles/scss/patterns/blocks/content-block-simple/_content-block-simple.scss
@@ -8,36 +8,48 @@
 @import '../../../globals/utils/aspect-ratio';
 
 @mixin content-block-simple {
-  .#{$prefix}--content-block-simple {
-    &__content {
-      padding-bottom: $carbon--spacing-07;
+  .#{$prefix}--content-block {
+    @include carbon--breakpoint(md) {
+      &__title,
+      &__cta {
+        padding-left: $carbon--spacing-05;
+        padding-right: $carbon--spacing-05;
+      }
     }
 
-    .#{$prefix}--content-item {
-      margin-bottom: $carbon--spacing-06;
-
-      &__heading {
-        margin-top: 0;
+    &-simple {
+      &__content {
+        padding-bottom: $carbon--spacing-07;
+        padding-left: $carbon--spacing-05;
+        padding-right: $carbon--spacing-05;
       }
 
-      p {
-        margin-bottom: $carbon--spacing-07;
+      .#{$prefix}--content-item {
+        margin-bottom: $carbon--spacing-06;
 
-        &:last-of-type {
-          margin-bottom: 0;
+        &__heading {
+          margin-top: 0;
+        }
+
+        p {
+          margin-bottom: $carbon--spacing-07;
+
+          &:last-of-type {
+            margin-bottom: 0;
+          }
         }
       }
-    }
 
-    .#{$prefix}--image__img {
-      width: 100%;
-      max-width: rem(640px);
-      padding-top: $carbon--spacing-06;
-      padding-bottom: $carbon--spacing-05;
+      .#{$prefix}--image__img {
+        width: 100%;
+        max-width: rem(640px);
+        padding-top: $carbon--spacing-06;
+        padding-bottom: $carbon--spacing-05;
 
-      @include carbon--breakpoint-down(md) {
-        padding-top: $carbon--spacing-03;
-        padding-bottom: 0;
+        @include carbon--breakpoint-down(md) {
+          padding-top: $carbon--spacing-03;
+          padding-bottom: 0;
+        }
       }
     }
   }
